2007-02-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-buffer): Comment the last change temporarily.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-default)
	(shimbun-nikkei-get-headers-top): Improve regexps and Message-IDs
	to prevent fetching the same articles.
	(shimbun-nikkei-prepare-article-top): Add a filter.

2007-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-zenkaku-to-hankaku)
	(shimbun-nikkei-char-code-property-table): New variables.
	(shimbun-get-headers): Convert zenkaku ASCII characters in
	subjects into hankaku.
	(shimbun-make-contents): Convert zenkaku ASCII characters into
	hankaku.

2007-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-buffer): Encode urls containing non-ASCII
	characters.

	* shimbun/sb-nikkei.el (shimbun-make-contents): Display only a
	link to the original page if it failed to extract the body of an
	article.
	(shimbun-nikkei-prepare-article-*): Return t if the article is
	successfully extracted.
	(shimbun-nikkei-prepare-article-top): Add a filter for special
	articles; fix a regexp; run shimbun-nikkei-prepare-article-default
	before filters having a potential to mistakenly extract the body.

2007-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-shasetsu): Use
	shimbun-nikkei-expand-url to strip redirect part.
	(shimbun-nikkei-prepare-article-top): Add a filter for special
	articles.

2007-02-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Use
	shimbun-nikkei-prepare-article-top for top group.
	(shimbun-get-headers): Modify base url according to group; sort
	headers for every group here; pass shimbun and range arguments to
	header functions.
	(shimbun-nikkei-expand-url): Strip redirect part.
	(shimbun-nikkei-tmp-ids)
	(shimbun-nikkei-tmp-subjects): New variables.
	(shimbun-nikkei-get-headers-*): Add shimbun and range arguments;